nullaway_error_3b38489b-db1c-48d9-83fb-0452ab59a62b.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:421: error: [NullAway] dereferenced expression this.renderables.get(renderType) is @Nullable
    this.renderables.get(renderType).add(renderable);
                                    ^
    (see http://t.uber.com/nullaway )
